--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,10 @@
   transition: 0.5s background-color ease;
 }
 
+body {
+  background-color: #36413E;
+}
+
 .navbar-wagon-white {
   background-color: white;
 }
