--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -6,6 +6,7 @@
   <% @cocktail.doses.each do |dose|%>
     <li><%= dose.description %> of <%= dose.ingredient.name %></li>
   <% end %>
+  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
 </ul>
 <p>
   <%= link_to 'Back', cocktails_path %> |
